--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,82 @@
 {
-  "window.zoomLevel": 0
+  "window.zoomLevel": 0,
+  "files.associations": {
+    "algorithm": "c",
+    "array": "c",
+    "atomic": "c",
+    "hash_map": "c",
+    "bit": "c",
+    "*.tcc": "c",
+    "cassert": "c",
+    "cctype": "c",
+    "cerrno": "c",
+    "cfloat": "c",
+    "chrono": "c",
+    "ciso646": "c",
+    "climits": "c",
+    "clocale": "c",
+    "cmath": "c",
+    "compare": "c",
+    "concepts": "c",
+    "condition_variable": "c",
+    "csignal": "c",
+    "cstdarg": "c",
+    "cstdbool": "c",
+    "cstddef": "c",
+    "cstdint": "c",
+    "cstdio": "c",
+    "cstdlib": "c",
+    "cstring": "c",
+    "ctime": "c",
+    "cwchar": "c",
+    "cwctype": "c",
+    "deque": "c",
+    "list": "c",
+    "map": "c",
+    "set": "c",
+    "string": "c",
+    "unordered_map": "c",
+    "unordered_set": "c",
+    "vector": "c",
+    "exception": "c",
+    "functional": "c",
+    "iterator": "c",
+    "memory": "c",
+    "memory_resource": "c",
+    "numeric": "c",
+    "optional": "c",
+    "random": "c",
+    "ratio": "c",
+    "string_view": "c",
+    "system_error": "c",
+    "tuple": "c",
+    "type_traits": "c",
+    "utility": "c",
+    "fstream": "c",
+    "future": "c",
+    "initializer_list": "c",
+    "iomanip": "c",
+    "ios": "c",
+    "iosfwd": "c",
+    "iostream": "c",
+    "istream": "c",
+    "limits": "c",
+    "locale": "c",
+    "mutex": "c",
+    "new": "c",
+    "ostream": "c",
+    "queue": "c",
+    "ranges": "c",
+    "sstream": "c",
+    "stack": "c",
+    "stdexcept": "c",
+    "stop_token": "c",
+    "streambuf": "c",
+    "thread": "c",
+    "cinttypes": "c",
+    "typeinfo": "c",
+    "valarray": "c",
+    "variant": "c",
+    "*.inc": "c"
+  }
 }
